# evm-decompiler

./: .gitignore  README.md  dune-project  evm_decompiler.opam
src/: bytecodeParser.ml  bytecodeParser.mli  dune  evm_decompiler.ml  instruction.ml  instruction.mli  opcode.ml  opcode.mli
tests/: compile.py  simple-1.sol  simple-2.sol  simple-3.sol  variables.sol
